# ChoboServer/Repositories/ScheduleRepository.cs
@@ -11,6 +11,18 @@ public sealed class ScheduleRepository(ChoboDbContext db) : IScheduleRepository
             .OrderBy(x => x.Name)
             .ToListAsync();
 
+    public Task<List<BackupScheduleEntity>> ListAsync(bool includeDeleted) =>
+        db.BackupSchedules
+            .Where(x => includeDeleted || !x.IsDeleted)
+            .OrderBy(x => x.Name)
+            .ToListAsync();
+
+    public Task<List<BackupScheduleEntity>> ListActiveByPolicyAsync(Guid policyId) =>
+        db.BackupSchedules
+            .Where(x => x.PolicyId == policyId && !x.IsDeleted)
+            .OrderBy(x => x.Name)
+            .ToListAsync();
+
     public Task<BackupScheduleEntity?> FindActiveAsync(Guid id) =>
         db.BackupSchedules.FirstOrDefaultAsync(x => x.Id == id && !x.IsDeleted);
 
@@ -26,5 +38,4 @@ public sealed class ScheduleRepository(ChoboDbContext db) : IScheduleRepository
     public async Task AddAsync(BackupScheduleEntity schedule) =>
         await db.BackupSchedules.AddAsync(schedule);
 }
-
 
